[package]
name = "bookmarker-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"
dirs = "4.0.0"
enigo = "0.0.14"
regex = "1.7.1"
serde = { version = "1.0.156", features = ["derive"] }
simple-dmenu = "0.1.0"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
